--- a/src/index.css
+++ b/src/index.css
@@ -11,5 +11,43 @@
 
 :root {
   --fc-border-color: rgba(155, 155, 155, 0.1) !important;
-  --fc-today-bg-color: rgb(123 112 229 / 20%) !important;
+  --fc-today-bg-color: rgb(255 255 255 / 0%) !important;  
+}
+
+.calendar-container {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.fc .fc-header-toolbar.fc-toolbar {
+  @apply p-2 m-0 text-xs;
+}
+
+.firstDayOfMonth {
+  @apply border-l-2 border-l-slate-400 !important;
+}
+
+.firstWeekOfMonth {
+  @apply border-t-2 border-t-slate-400 !important
+}
+
+.fc-button {
+  text-transform: capitalize !important;
+}
+
+.fc-today-button {
+  @apply bg-indigo-700 !important;
+}
+
+.fc-day-sat, .fc-day-sun {
+  @apply bg-slate-100 dark:bg-slate-700 !important;
+}
+
+.fc-day-today .fc-daygrid-day-top {
+  @apply bg-indigo-500 text-slate-100 !important;
+}
+
+.fc-col-header-cell.fc-day-today {
+  @apply bg-indigo-500 text-slate-100 !important;
+
 }
